--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "electron-vnc",
+  "private": true,
   "version": "1.0.0",
   "description": "A VNC viewer build with Nodejs & Electron.",
   "main": "main.js",
@@ -10,9 +11,15 @@
   "keywords": [
     "Electron"
   ],
-  "author": "Lucas",
+  "author": "lucaslah",
   "license": "MIT",
+  "workspaces": [
+    "electron",
+    "vnc-server"
+  ],
   "devDependencies": {
-    "electron": "^10.2.0"
+    "@types/node": "^15.12.2",
+    "electron": "^10.2.0",
+    "typescript": "^4.3.4"
   }
 }
